k8s/base/postgres.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgresql-db
  namespace: bitbuyer
spec:
  serviceName: postgresql-db-service
  selector:
    matchLabels:
      app: postgresql-db
  replicas: 1
  template:
    metadata:
      labels:
        app: postgresql-db
    spec:
      containers:
        - name: postgresql-db
          image: postgres:14.0
          volumeMounts:
            # TODO add this to postgres-config config map
            - name: postgres-pv
              mountPath: /var/lib/postgresql/data/
      volumes:
        - name: postgres-pv
          persistentVolumeClaim:
            claimName: postgres-pvc
