k8s/base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: ingress
  namespace: bitbuyer
spec:
  rules:
    - host: bitbuyer.tom-preston.info
      http:
        paths:
          - backend:
              service:
                name: front-external
                port:
                  number: 8080
            path: /
            pathType: Prefix
